[tool.poetry]
name = "toolhub"
version = "0.1.0"
description = ""
authors = ["tree"]

[tool.poetry.dependencies]
python = "^3.9"
celery = "^5.0.5"
lxml = "^4.6.2"
requests = "^2.25.1"
redis = "^3.5.3"
feedparser = "^6.0.2"

[tool.poetry.dev-dependencies]
mypy = "^0.790"
flake8 = "^3.8.4"
pytest = "^6.2.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[[tool.poetry.source]]
name = "tsinghua"
url = "https://pypi.tuna.tsinghua.edu.cn/simple"